set up layout of home page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-	<script src="index.js"></script>
-  </body>
+    <title>My Reading List</title>
+    <link rel="stylesheet" href="resources/css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Book Tracker</h1>
+        <h2>track and manage your reading list</h2>
+    </header>
+
+    <main>
+        <div class="wrapper">
+
+            
+
+            <div class="box" id="box1">
+               <h3 class="box-heading">Reading List</h3>
+
+               <div class="inner-box">
+                Books
+               </div>
+
+            </div>
+
+            <div class="box" id="box2">
+                <h3 class="box-heading">Progress</h3>
+                <button class="goal-button">Add/Set Goal</button>
+
+
+            </div>
+            <div class="box">Three</div>
+
+
+        </div>
+    </main>
+
+    <footer>
+        <!-- Footer content -->
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
