add buttons and progress bar

--- a/index.html
+++ b/index.html
@@ -21,15 +21,30 @@
                <h3 class="box-heading">Reading List</h3>
 
                <div class="inner-box">
-                Books
+                <div class="books-read-label">
+                    Books Read
+                </div>
+
+                <div class="books-read-line"></div>
+
+                <div class="container">
+                    <button class="button" id="add-book-button">Add Book</button>
+                </div>
+                <div class="books-read-box">
+
+                </div>
                </div>
 
             </div>
 
-            <div class="box" id="box2">
+            <div class="box" id="progress-box">
                 <h3 class="box-heading">Progress</h3>
-                <button class="goal-button">Add/Set Goal</button>
+                <button class="button">Add/Set Goal</button>
 
+                <div class="progress-bar">
+                    <div class="progress" style="width: 10%;"></div> <!-- Adjust the width based on progress -->
+                </div>
+                
 
             </div>
             <div class="box">Three</div>
