create add book form

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                 <div class="books-read-line"></div>
 
                 <div class="container">
-                    <button class="button" id="add-book-button">Add Book</button>
+                    <a href="add_book.html" class="button" id="add-book-button">Add Book</a>
                 </div>
-                <div class="books-read-box">
 
+                <div class="books-read-box">
+                    
                 </div>
                </div>
 
