create 'add book' button functionality

--- a/add_book.html
+++ b/add_book.html
@@ -12,12 +12,11 @@
 <body>
     <header>
         <h1>Add Book</h1>
-        <!-- Add navigation links or buttons as needed -->
     </header>
 
     <main>
         <div class="inner-book-form-box">
-            <form id="addBookForm">
+            <form id="add-book-form">
                 <label for="title">Title:</label><br>
                 <input type="text" id="title" name="title" required><br>
 
@@ -61,19 +60,19 @@
 
 
 
-                <!-- Add more input fields for book information (e.g., author, genre, etc.) -->
                 <div class="extra-space"></div>
                 <a href="index.html" class="button">Back</a>
                 <button type="submit" >Submit</button>
             </form>
+            <p id="log"></p>
+
         </div>
     </main>
 
     <footer>
-        <!-- Footer content, e.g., copyright information -->
     </footer>
 
-    <!-- Include JavaScript file for form submission and functionality -->
-    <script src="add_books.js"></script>
+    <script src="add_book.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
