--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Reading List</title>
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/index.css">
+
 </head>
 <body>
     <header>
@@ -27,8 +29,9 @@
 
                 <div class="books-read-line"></div>
 
-                <div class="container">
+                <div class="books-read-container">
                     <a href="add_book.html" class="button" id="add-book-button">Add Book</a>
+                    <a href="add_book.html" class="button" id="remove-book-button">Remove Book</a>
                 </div>
 
                 <div class="books-read-box">
@@ -59,5 +62,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="index.js"></script>
+
 </body>
 </html>
