add 'remove book' button and functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
                 <div class="books-read-container">
                     <a href="add_book.html" class="button" id="add-book-button">Add Book</a>
-                    <a href="add_book.html" class="button" id="remove-book-button">Remove Book</a>
+                    <div class="button" id="remove-book-button">Remove Book</div>
+                    <select id="remove-book-dropdown"></select>
+
                 </div>
 
                 <div class="books-read-box">
