make progress bar dynamic

--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
 
             <div class="box" id="progress-box">
                 <h3 class="box-heading">Progress</h3>
-                <button class="button">Add/Set Goal</button>
-
+                <a href="add_goal.html" class="button" id="add-goal-button">Add/Set Goal</a>
                 <div class="progress-bar">
                     <div class="progress" style="width: 10%;"></div> <!-- Adjust the width based on progress -->
+                    <div class="progress-numbers">
+                        <span class="start-number" id="num-books">0</span>
+                        <span class="target-number" id="target-number">100</span> <!-- Replace with the target number -->
+                    </div>
                 </div>
+
+                
                 
 
             </div>
