edit submit bottom in add goal form

--- a/add_goal.html
+++ b/add_goal.html
@@ -15,8 +15,8 @@
     </header>
 
     <main>
-        <div class="inner-goal-form-box">
-            <form id="add-goal-form">
+        <div class="inner-goal-form-box" >
+            <form id="add-goal-form" action="index.html">
                 <label for="goal-start-date">Goal Start Date:</label>
                 <input type="date" id="goal-start-date" name="goal-start-date" required>
 
