--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
                 <h3 class="box-heading">Progress</h3>
                 <a href="add_goal.html" class="button" id="add-goal-button">Add/Set Goal</a>
                 <div class="progress-bar">
-                    <div class="progress" style="width: 10%;"></div> <!-- Adjust the width based on progress -->
+                    <div class="progress" style="width: 0%;"></div> <!-- Adjust the width based on progress -->
                     <div class="progress-numbers">
                         <span class="start-number" id="num-books">0</span>
                         <span class="target-number" id="target-number">100</span> <!-- Replace with the target number -->
                     </div>
+                </div>
+
+
+                <div class="info">
+                    Goal <span id="progress-percent"></span>% complete <br>
+                    5 more books until goal reached: <br>
+                    3 books read <br>
+                    Goal start: <span id="start-date-display"></span> <br>
+                    Goal end: <span id="end-date-display"></span> <br>
+
                 </div>
 
                 
