add confirm remove button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                 <div class="books-read-container">
                     <a href="add_book.html" class="button" id="add-book-button">Add Book</a>
                     <div class="button" id="remove-book-button">Remove Book</div>
-                    <select id="remove-book-dropdown"></select>
+                    <div class="remove-book-container">
+                        <div><select id="remove-book-dropdown"></select></div>
+                        <div class="button" id="done-remove">Confirm Remove</div>
+                    </div>
+
 
                 </div>
 
