add more functionality to progress stats

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
 
                 <div class="info">
                     Goal <span id="progress-percent"></span>% complete <br>
-                    5 more books until goal reached: <br>
-                    3 books read <br>
+                    <span id="num-more-books"></span> more book(s) until goal reached <br>
+                    <span id="num-books-read"></span> book(s) read <br>
                     Goal start: <span id="start-date-display"></span> <br>
                     Goal end: <span id="end-date-display"></span> <br>
+                    Goal notes: <span id="goal-notes"></span><br>
 
                 </div>
 
@@ -72,7 +73,7 @@
                 
 
             </div>
-            <div class="box">Three</div>
+            <div class="box" id="tbr-box">TBR</div>
 
 
         </div>
