add functionality for tbr box

--- a/index.html
+++ b/index.html
@@ -73,7 +73,23 @@
                 
 
             </div>
-            <div class="box" id="tbr-box">TBR</div>
+            <div class="box" id="tbr-box">
+                <h3 class=""box-heading>TBR</h3>
+                <div class="tbr-container">
+                    <a href="add_tbr.html" class="button" id="add-tbr-button">+</a>
+                    <div class="button" id="remove-tbr-button">-</div>
+                    <div class="remove-tbr-container">
+                        <div><select id="remove-tbr-dropdown"></select></div>
+                        <div class="button" id="tbr-done-remove">Confirm Remove</div>
+                    </div>
+
+                    <div class="tbr-list-box">
+                    
+                    </div>
+
+
+            </div>
+
 
 
         </div>
