hide dropdown when remove is pressed again

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="box" id="tbr-box">
                 <h3 class=""box-heading>TBR</h3>
                 <div class="tbr-container">
-                    <a href="add_tbr.html" class="button" id="add-tbr-button">+</a>
-                    <div class="button" id="remove-tbr-button">-</div>
+                    <a href="add_tbr.html" class="button" id="add-tbr-button">Add TBR</a>
+                    <div class="button" id="remove-tbr-button">Remove TBR</div>
                     <div class="remove-tbr-container">
                         <div><select id="remove-tbr-dropdown"></select></div>
                         <div class="button" id="tbr-done-remove">Confirm Remove</div>
