--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Reading List</title>
+    <title>Reading Journey</title>
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/index.css">
 
 </head>
 <body>
     <header>
-        <h1>Book Tracker</h1>
-        <h2>track and manage your reading list</h2>
+        <h1>Reading Journey</h1>
+        <h2>track and manage your reading</h2>
     </header>
 
     <main>
