change name to book journey

--- a/add_tbr.html
+++ b/add_tbr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add TBR - Reading Journey</title>
+    <title>Add TBR - Book Journey</title>
     <!-- Include CSS file for styling -->
     <link rel="stylesheet" href="resources/css/add_tbr.css">
     <link rel="stylesheet" href="resources/css/style.css">
