--- a/add_goal.html
+++ b/add_goal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Goal - Reading Journey</title>
+    <title>Add Goal - Book Journey</title>
     <!-- Include CSS file for styling -->
     <link rel="stylesheet" href="resources/css/add_goal.css">
     <link rel="stylesheet" href="resources/css/style.css">
