--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reading Journey</title>
+    <title>Book Journey</title>
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/index.css">
 
 </head>
 <body>
     <header>
-        <h1>Reading Journey</h1>
+        <h1>Book Journey</h1>
         <h2>track and manage your reading</h2>
     </header>
 
